better mobile styles and fixed layout bugs

--- a/source/scss/_forms.scss
+++ b/source/scss/_forms.scss
@@ -26,7 +26,7 @@ label {
   line-height: 1.2;
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(12em, 1fr));
   gap: 0.2rem;
   user-select: none;
   font-size: 0.8rem;
